syntax = "proto3";
package shared;

message ServerInfo {
  string uuid = 1;
  string name = 2;
  string hostname = 3;
  string address = 4;
}

message GroupInfo {
  int32 local_id = 1;
  string name = 2;
}
